readme au propre